infrastructure/kustomize_web/hemihatchlings-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hemihatchlings-web
  labels:
    app: hemihatchlings-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hemihatchlings-web
  template:
    metadata:
      labels:
        app: hemihatchlings-web
    spec:
      containers:
      - name: hemihatchlings-web
        image: hemilabs/hemihatchlings-web:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: dockerhub-secret
