infrastructure/kustomize_web/hemihatchlings-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hemihatchlings-web-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-nginx
spec:
  ingressClassName: nginx
  rules:
  - host: hemihatchlings.hemi.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hemihatchlings-web-service
            port:
              number: 80
  tls:
  - hosts:
    - hemihatchlings.hemi.xyz
    secretName: hemihatchlings-tls
